# ocaml-lilv

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  Makefile  README.md  dune-project  index.html  lilv.opam
.github/workflows/: build.yml  doc.yml
examples/: .merlin  Makefile  amp.ml  dune  inspect  inspect.ml  test.ml
examples/amp/: Makefile  amp.ml  dune
examples/inspect/: Makefile  README.md  dune  inspect.ml
lilv/: index.html
lilv/Lilv/: index.html
lilv/Lilv/LV2/: index.html
lilv/Lilv/LV2/Core/: index.html
lilv/Lilv/Node/: index.html
lilv/Lilv/Nodes/: index.html
lilv/Lilv/Plugin/: index.html
lilv/Lilv/Plugin/Class/: index.html
lilv/Lilv/Plugin/Instance/: index.html
lilv/Lilv/Plugins/: index.html
lilv/Lilv/Port/: index.html
lilv/Lilv/World/: index.html
src/: .merlin  Makefile  dune  function_description.ml  lilv.ml  lilv.mli  type_description.ml
src/config/: discover.ml
src/generator/: dune  gen_stubs.ml  gen_types_c.ml
src/stubs/: dune  lilv_stubs.ml
src/types/: dune  lilv_types.ml
