opam-version: "2.0"
name: "lilv"
version: "0.1.0"
maintainer: "samuel.mimram@ens-lyon.org"
homepage: "https://github.com/savonet/ocaml-lilv"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
bug-reports: "https://github.com/savonet/ocaml-lilv/issues"
dev-repo: "git+https://github.com/savonet/ocaml-lilv.git"
synopsis: "Bindings to lilv library for using LV2 audio plugins"
description: """
Bindings to the lilv library for simple use of LV2 plugins in applications. LV2 is an open extensible standard for audio plugins. Many types of plugins can be built with LV2, including audio effects, synthesizers, and control processors for modulation and automation.
"""
depends: [
  "ocaml"
  "dune"
  "ctypes"
  "ctypes-foreign"
]
depexts: [
  ["liblilv-dev"] {os-family = "debian"}
  ["lv2-examples"] {os-family = "debian" & with-test}
  ["lilv"] {os = "macos" & os-distribution = "homebrew"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  [make "-C" "examples" "test"] { with-test }
]
