(library
 (name lilv)
 (public_name lilv)
 (libraries lilv.stubs ctypes ctypes.foreign)
 (c_names lilv_generated_stubs)
 (c_library_flags "-llilv-0")
)

(rule
 (targets lilv_generated_stubs.ml)
 (deps    (:gen ./generator/gen_stubs.exe))
 (action  (run %{gen} ml %{targets})))

(rule
 (targets lilv_generated_stubs.c)
 (deps    (:gen ./generator/gen_stubs.exe))
 (action  (run %{gen} c %{targets})))
